--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,8 +2,13 @@
 name = "cht"
 version = "0.1.0"
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+description = "Rust CLI for interacting with https://cht.sh"
+authors = ["blazkowolf"]
+readme = "README.md"
+repository = "https://github.com/RobDanHill/cht"
+license = "MIT"
+keywords = ["cht.sh", "cheat.sh", "cheat", "cli", "client"]
+categories = ["asynchronous", "command-line-utilities", "concurrency", "network-programming", "web-programming::http-client"]
 
 [dependencies]
 futures = "0.3.19"
