--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 description = "Rust CLI for interacting with https://cht.sh"
 authors = ["blazkowolf"]
 readme = "README.md"
-repository = "https://github.com/RobDanHill/cht"
+repository = "https://github.com/blazkowolf/cht"
 license = "MIT"
 keywords = ["cht.sh", "cheat.sh", "cheat", "cli", "client"]
 categories = ["asynchronous", "command-line-utilities", "concurrency", "network-programming", "web-programming::http-client"]
@@ -13,4 +13,5 @@ categories = ["asynchronous", "command-line-utilities", "concurrency", "network-
 [dependencies]
 futures = "0.3.19"
 hyper = { version = "0.14.16", features = ["full"] }
+clap = { version = "3.0.14", features = ["derive"] }
 tokio = { version = "1.16.0", features = ["full"] }
