--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -1,8 +1,10 @@
+edition = "2021"
+
 overflow_delimited_expr = true
 newline_style = "Unix"
 imports_granularity = "Crate"
 reorder_impl_items = true
 blank_lines_upper_bound = 2
 comment_width = 110
-max_width = 110
+# max_width = 110
 inline_attribute_width = 80
